parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> main functionloop
Rule 2     main -> MAIN block
Rule 3     functionloop -> function functionloop
Rule 4     functionloop -> <empty>
Rule 5     function -> FUNCTION functiontype ID O_PARENTHESIS parameters C_PARENTHESIS block
Rule 6     functiontype -> VOID
Rule 7     functiontype -> BOOL
Rule 8     functiontype -> INT
Rule 9     functiontype -> FLOAT
Rule 10    functiontype -> STRING
Rule 11    type -> BOOL
Rule 12    type -> INT
Rule 13    type -> FLOAT
Rule 14    type -> STRING
Rule 15    block -> O_BRACKET statutesloop functionreturn C_BRACKET
Rule 16    functionreturn -> RETURN expression SEMICOLON
Rule 17    functionreturn -> <empty>
Rule 18    statutesloop -> statute statutesloop
Rule 19    statutesloop -> <empty>
Rule 20    statute -> init
Rule 21    statute -> condition
Rule 22    statute -> writting
Rule 23    statute -> loop
Rule 24    statute -> assignation
Rule 25    statute -> functioncall
Rule 26    assignation -> var_assign EQUALS expression SEMICOLON
Rule 27    writting -> PRINT O_PARENTHESIS writtingloop C_PARENTHESIS SEMICOLON
Rule 28    writtingloop -> expression optionalwritting
Rule 29    optionalwritting -> COMMA writtingloop
Rule 30    optionalwritting -> <empty>
Rule 31    init -> listinit
Rule 32    init -> normalinit
Rule 33    normalinit -> type var EQUALS expression SEMICOLON
Rule 34    listinit -> LIST type var EQUALS list SEMICOLON
Rule 35    list -> O_S_BRACKET listelements C_S_BRACKET
Rule 36    listelements -> constants optionalconstants
Rule 37    listelements -> <empty>
Rule 38    optionalconstants -> COMMA constants optionalconstants
Rule 39    optionalconstants -> <empty>
Rule 40    condition -> IF O_PARENTHESIS expression C_PARENTHESIS block else
Rule 41    else -> ELSE block
Rule 42    else -> <empty>
Rule 43    expression -> expression2 expressionoptional
Rule 44    expressionoptional -> logicop expression2
Rule 45    expressionoptional -> <empty>
Rule 46    expression2 -> exp expression2optional
Rule 47    expression2optional -> relop exp
Rule 48    expression2optional -> <empty>
Rule 49    logicop -> AND
Rule 50    logicop -> OR
Rule 51    relop -> EQUALITY
Rule 52    relop -> GREATER
Rule 53    relop -> GREATER_EQUAL
Rule 54    relop -> LESS
Rule 55    relop -> LESS_EQUAL
Rule 56    relop -> DIFFERENT
Rule 57    exp -> term exploop
Rule 58    exploop -> addsub exp
Rule 59    exploop -> <empty>
Rule 60    addsub -> SUM
Rule 61    addsub -> MINUS
Rule 62    term -> fact termloop
Rule 63    termloop -> divmult term
Rule 64    termloop -> <empty>
Rule 65    divmult -> MULTIPLY
Rule 66    divmult -> DIVIDE
Rule 67    divmult -> MOD
Rule 68    fact -> varconst
Rule 69    fact -> O_PARENTHESIS add_o_parenthesis expression C_PARENTHESIS add_c_parenthesis
Rule 70    add_o_parenthesis -> <empty>
Rule 71    add_c_parenthesis -> <empty>
Rule 72    var_assign -> ID listaccess
Rule 73    var -> ID listaccess
Rule 74    listaccess -> O_S_BRACKET INTCONST C_S_BRACKET
Rule 75    listaccess -> <empty>
Rule 76    varconst -> varconstfunction
Rule 77    varconst -> constants
Rule 78    varconstfunction -> ID functionorlist
Rule 79    functionorlist -> O_S_BRACKET INTCONST C_S_BRACKET
Rule 80    functionorlist -> O_PARENTHESIS parametersinput C_PARENTHESIS
Rule 81    functionorlist -> <empty>
Rule 82    constants -> INTCONST
Rule 83    constants -> FLOATCONST
Rule 84    constants -> STRINGCONST
Rule 85    constants -> booleanconst
Rule 86    booleanconst -> TRUE
Rule 87    booleanconst -> FALSE
Rule 88    loop -> whileloop
Rule 89    loop -> timesloop
Rule 90    whileloop -> WHILE O_PARENTHESIS expression C_PARENTHESIS block
Rule 91    timesloop -> TIMES O_PARENTHESIS INTCONST C_PARENTHESIS block
Rule 92    functioncall -> ID O_PARENTHESIS parametersinput C_PARENTHESIS SEMICOLON
Rule 93    parametersinput -> expression parametersinputloop
Rule 94    parametersinput -> <empty>
Rule 95    parametersinputloop -> COMMA expression parametersinputloop
Rule 96    parametersinputloop -> <empty>
Rule 97    parameters -> parameterinit parametersloop
Rule 98    parameters -> <empty>
Rule 99    parameterinit -> type ID
Rule 100   parametersloop -> COMMA parameterinit parametersloop
Rule 101   parametersloop -> <empty>

Terminals, with rules where they appear

AND                  : 49
BOOL                 : 7 11
COMMA                : 29 38 95 100
C_BRACKET            : 15
C_PARENTHESIS        : 5 27 40 69 80 90 91 92
C_S_BRACKET          : 35 74 79
DIFFERENT            : 56
DIVIDE               : 66
ELSE                 : 41
EQUALITY             : 51
EQUALS               : 26 33 34
FALSE                : 87
FLOAT                : 9 13
FLOATCONST           : 83
FUNCTION             : 5
GREATER              : 52
GREATER_EQUAL        : 53
ID                   : 5 72 73 78 92 99
IF                   : 40
INT                  : 8 12
INTCONST             : 74 79 82 91
LESS                 : 54
LESS_EQUAL           : 55
LIST                 : 34
MAIN                 : 2
MINUS                : 61
MOD                  : 67
MULTIPLY             : 65
OR                   : 50
O_BRACKET            : 15
O_PARENTHESIS        : 5 27 40 69 80 90 91 92
O_S_BRACKET          : 35 74 79
PRINT                : 27
RETURN               : 16
SEMICOLON            : 16 26 27 33 34 92
STRING               : 10 14
STRINGCONST          : 84
SUM                  : 60
TIMES                : 91
TRUE                 : 86
VOID                 : 6
WHILE                : 90
error                : 

Nonterminals, with rules where they appear

add_c_parenthesis    : 69
add_o_parenthesis    : 69
addsub               : 58
assignation          : 24
block                : 2 5 40 41 90 91
booleanconst         : 85
condition            : 21
constants            : 36 38 77
divmult              : 63
else                 : 40
exp                  : 46 47 58
exploop              : 57
expression           : 16 26 28 33 40 69 90 93 95
expression2          : 43 44
expression2optional  : 46
expressionoptional   : 43
fact                 : 62
function             : 3
functioncall         : 25
functionloop         : 1 3
functionorlist       : 78
functionreturn       : 15
functiontype         : 5
init                 : 20
list                 : 34
listaccess           : 72 73
listelements         : 35
listinit             : 31
logicop              : 44
loop                 : 23
main                 : 1
normalinit           : 32
optionalconstants    : 36 38
optionalwritting     : 28
parameterinit        : 97 100
parameters           : 5
parametersinput      : 80 92
parametersinputloop  : 93 95
parametersloop       : 97 100
program              : 0
relop                : 47
statute              : 18
statutesloop         : 15 18
term                 : 57 63
termloop             : 62
timesloop            : 89
type                 : 33 34 99
var                  : 33 34
var_assign           : 26
varconst             : 68
varconstfunction     : 76
whileloop            : 88
writting             : 22
writtingloop         : 27 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . main functionloop
    (2) main -> . MAIN block

    MAIN            shift and go to state 3

    main                           shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> main . functionloop
    (3) functionloop -> . function functionloop
    (4) functionloop -> .
    (5) function -> . FUNCTION functiontype ID O_PARENTHESIS parameters C_PARENTHESIS block

    $end            reduce using rule 4 (functionloop -> .)
    FUNCTION        shift and go to state 5

    function                       shift and go to state 4
    functionloop                   shift and go to state 6

state 2

    (0) S' -> program .



state 3

    (2) main -> MAIN . block
    (15) block -> . O_BRACKET statutesloop functionreturn C_BRACKET

    O_BRACKET       shift and go to state 7

    block                          shift and go to state 8

state 4

    (3) functionloop -> function . functionloop
    (3) functionloop -> . function functionloop
    (4) functionloop -> .
    (5) function -> . FUNCTION functiontype ID O_PARENTHESIS parameters C_PARENTHESIS block

    $end            reduce using rule 4 (functionloop -> .)
    FUNCTION        shift and go to state 5

    function                       shift and go to state 4
    functionloop                   shift and go to state 9

state 5

    (5) function -> FUNCTION . functiontype ID O_PARENTHESIS parameters C_PARENTHESIS block
    (6) functiontype -> . VOID
    (7) functiontype -> . BOOL
    (8) functiontype -> . INT
    (9) functiontype -> . FLOAT
    (10) functiontype -> . STRING

    VOID            shift and go to state 12
    BOOL            shift and go to state 14
    INT             shift and go to state 11
    FLOAT           shift and go to state 13
    STRING          shift and go to state 10

    functiontype                   shift and go to state 15

state 6

    (1) program -> main functionloop .

    $end            reduce using rule 1 (program -> main functionloop .)


state 7

    (15) block -> O_BRACKET . statutesloop functionreturn C_BRACKET
    (18) statutesloop -> . statute statutesloop
    (19) statutesloop -> .
    (20) statute -> . init
    (21) statute -> . condition
    (22) statute -> . writting
    (23) statute -> . loop
    (24) statute -> . assignation
    (25) statute -> . functioncall
    (31) init -> . listinit
    (32) init -> . normalinit
    (40) condition -> . IF O_PARENTHESIS expression C_PARENTHESIS block else
    (27) writting -> . PRINT O_PARENTHESIS writtingloop C_PARENTHESIS SEMICOLON
    (88) loop -> . whileloop
    (89) loop -> . timesloop
    (26) assignation -> . var_assign EQUALS expression SEMICOLON
    (92) functioncall -> . ID O_PARENTHESIS parametersinput C_PARENTHESIS SEMICOLON
    (34) listinit -> . LIST type var EQUALS list SEMICOLON
    (33) normalinit -> . type var EQUALS expression SEMICOLON
    (90) whileloop -> . WHILE O_PARENTHESIS expression C_PARENTHESIS block
    (91) timesloop -> . TIMES O_PARENTHESIS INTCONST C_PARENTHESIS block
    (72) var_assign -> . ID listaccess
    (11) type -> . BOOL
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . STRING

    RETURN          reduce using rule 19 (statutesloop -> .)
    C_BRACKET       reduce using rule 19 (statutesloop -> .)
    IF              shift and go to state 31
    PRINT           shift and go to state 18
    ID              shift and go to state 29
    LIST            shift and go to state 37
    WHILE           shift and go to state 17
    TIMES           shift and go to state 16
    BOOL            shift and go to state 21
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    STRING          shift and go to state 25

    whileloop                      shift and go to state 19
    init                           shift and go to state 20
    var_assign                     shift and go to state 22
    type                           shift and go to state 23
    normalinit                     shift and go to state 24
    listinit                       shift and go to state 26
    writting                       shift and go to state 27
    timesloop                      shift and go to state 28
    condition                      shift and go to state 30
    statute                        shift and go to state 32
    assignation                    shift and go to state 33
    statutesloop                   shift and go to state 34
    functioncall                   shift and go to state 38
    loop                           shift and go to state 39

state 8

    (2) main -> MAIN block .

    FUNCTION        reduce using rule 2 (main -> MAIN block .)
    $end            reduce using rule 2 (main -> MAIN block .)


state 9

    (3) functionloop -> function functionloop .

    $end            reduce using rule 3 (functionloop -> function functionloop .)


state 10

    (10) functiontype -> STRING .

    ID              reduce using rule 10 (functiontype -> STRING .)


state 11

    (8) functiontype -> INT .

    ID              reduce using rule 8 (functiontype -> INT .)


state 12

    (6) functiontype -> VOID .

    ID              reduce using rule 6 (functiontype -> VOID .)


state 13

    (9) functiontype -> FLOAT .

    ID              reduce using rule 9 (functiontype -> FLOAT .)


state 14

    (7) functiontype -> BOOL .

    ID              reduce using rule 7 (functiontype -> BOOL .)


state 15

    (5) function -> FUNCTION functiontype . ID O_PARENTHESIS parameters C_PARENTHESIS block

    ID              shift and go to state 40


state 16

    (91) timesloop -> TIMES . O_PARENTHESIS INTCONST C_PARENTHESIS block

    O_PARENTHESIS   shift and go to state 41


state 17

    (90) whileloop -> WHILE . O_PARENTHESIS expression C_PARENTHESIS block

    O_PARENTHESIS   shift and go to state 42


state 18

    (27) writting -> PRINT . O_PARENTHESIS writtingloop C_PARENTHESIS SEMICOLON

    O_PARENTHESIS   shift and go to state 43


state 19

    (88) loop -> whileloop .

    IF              reduce using rule 88 (loop -> whileloop .)
    PRINT           reduce using rule 88 (loop -> whileloop .)
    ID              reduce using rule 88 (loop -> whileloop .)
    LIST            reduce using rule 88 (loop -> whileloop .)
    WHILE           reduce using rule 88 (loop -> whileloop .)
    TIMES           reduce using rule 88 (loop -> whileloop .)
    BOOL            reduce using rule 88 (loop -> whileloop .)
    INT             reduce using rule 88 (loop -> whileloop .)
    FLOAT           reduce using rule 88 (loop -> whileloop .)
    STRING          reduce using rule 88 (loop -> whileloop .)
    RETURN          reduce using rule 88 (loop -> whileloop .)
    C_BRACKET       reduce using rule 88 (loop -> whileloop .)


state 20

    (20) statute -> init .

    IF              reduce using rule 20 (statute -> init .)
    PRINT           reduce using rule 20 (statute -> init .)
    ID              reduce using rule 20 (statute -> init .)
    LIST            reduce using rule 20 (statute -> init .)
    WHILE           reduce using rule 20 (statute -> init .)
    TIMES           reduce using rule 20 (statute -> init .)
    BOOL            reduce using rule 20 (statute -> init .)
    INT             reduce using rule 20 (statute -> init .)
    FLOAT           reduce using rule 20 (statute -> init .)
    STRING          reduce using rule 20 (statute -> init .)
    RETURN          reduce using rule 20 (statute -> init .)
    C_BRACKET       reduce using rule 20 (statute -> init .)


state 21

    (11) type -> BOOL .

    ID              reduce using rule 11 (type -> BOOL .)


state 22

    (26) assignation -> var_assign . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 44


state 23

    (33) normalinit -> type . var EQUALS expression SEMICOLON
    (73) var -> . ID listaccess

    ID              shift and go to state 46

    var                            shift and go to state 45

state 24

    (32) init -> normalinit .

    IF              reduce using rule 32 (init -> normalinit .)
    PRINT           reduce using rule 32 (init -> normalinit .)
    ID              reduce using rule 32 (init -> normalinit .)
    LIST            reduce using rule 32 (init -> normalinit .)
    WHILE           reduce using rule 32 (init -> normalinit .)
    TIMES           reduce using rule 32 (init -> normalinit .)
    BOOL            reduce using rule 32 (init -> normalinit .)
    INT             reduce using rule 32 (init -> normalinit .)
    FLOAT           reduce using rule 32 (init -> normalinit .)
    STRING          reduce using rule 32 (init -> normalinit .)
    RETURN          reduce using rule 32 (init -> normalinit .)
    C_BRACKET       reduce using rule 32 (init -> normalinit .)


state 25

    (14) type -> STRING .

    ID              reduce using rule 14 (type -> STRING .)


state 26

    (31) init -> listinit .

    IF              reduce using rule 31 (init -> listinit .)
    PRINT           reduce using rule 31 (init -> listinit .)
    ID              reduce using rule 31 (init -> listinit .)
    LIST            reduce using rule 31 (init -> listinit .)
    WHILE           reduce using rule 31 (init -> listinit .)
    TIMES           reduce using rule 31 (init -> listinit .)
    BOOL            reduce using rule 31 (init -> listinit .)
    INT             reduce using rule 31 (init -> listinit .)
    FLOAT           reduce using rule 31 (init -> listinit .)
    STRING          reduce using rule 31 (init -> listinit .)
    RETURN          reduce using rule 31 (init -> listinit .)
    C_BRACKET       reduce using rule 31 (init -> listinit .)


state 27

    (22) statute -> writting .

    IF              reduce using rule 22 (statute -> writting .)
    PRINT           reduce using rule 22 (statute -> writting .)
    ID              reduce using rule 22 (statute -> writting .)
    LIST            reduce using rule 22 (statute -> writting .)
    WHILE           reduce using rule 22 (statute -> writting .)
    TIMES           reduce using rule 22 (statute -> writting .)
    BOOL            reduce using rule 22 (statute -> writting .)
    INT             reduce using rule 22 (statute -> writting .)
    FLOAT           reduce using rule 22 (statute -> writting .)
    STRING          reduce using rule 22 (statute -> writting .)
    RETURN          reduce using rule 22 (statute -> writting .)
    C_BRACKET       reduce using rule 22 (statute -> writting .)


state 28

    (89) loop -> timesloop .

    IF              reduce using rule 89 (loop -> timesloop .)
    PRINT           reduce using rule 89 (loop -> timesloop .)
    ID              reduce using rule 89 (loop -> timesloop .)
    LIST            reduce using rule 89 (loop -> timesloop .)
    WHILE           reduce using rule 89 (loop -> timesloop .)
    TIMES           reduce using rule 89 (loop -> timesloop .)
    BOOL            reduce using rule 89 (loop -> timesloop .)
    INT             reduce using rule 89 (loop -> timesloop .)
    FLOAT           reduce using rule 89 (loop -> timesloop .)
    STRING          reduce using rule 89 (loop -> timesloop .)
    RETURN          reduce using rule 89 (loop -> timesloop .)
    C_BRACKET       reduce using rule 89 (loop -> timesloop .)


state 29

    (92) functioncall -> ID . O_PARENTHESIS parametersinput C_PARENTHESIS SEMICOLON
    (72) var_assign -> ID . listaccess
    (74) listaccess -> . O_S_BRACKET INTCONST C_S_BRACKET
    (75) listaccess -> .

    O_PARENTHESIS   shift and go to state 49
    O_S_BRACKET     shift and go to state 47
    EQUALS          reduce using rule 75 (listaccess -> .)

    listaccess                     shift and go to state 48

state 30

    (21) statute -> condition .

    IF              reduce using rule 21 (statute -> condition .)
    PRINT           reduce using rule 21 (statute -> condition .)
    ID              reduce using rule 21 (statute -> condition .)
    LIST            reduce using rule 21 (statute -> condition .)
    WHILE           reduce using rule 21 (statute -> condition .)
    TIMES           reduce using rule 21 (statute -> condition .)
    BOOL            reduce using rule 21 (statute -> condition .)
    INT             reduce using rule 21 (statute -> condition .)
    FLOAT           reduce using rule 21 (statute -> condition .)
    STRING          reduce using rule 21 (statute -> condition .)
    RETURN          reduce using rule 21 (statute -> condition .)
    C_BRACKET       reduce using rule 21 (statute -> condition .)


state 31

    (40) condition -> IF . O_PARENTHESIS expression C_PARENTHESIS block else

    O_PARENTHESIS   shift and go to state 50


state 32

    (18) statutesloop -> statute . statutesloop
    (18) statutesloop -> . statute statutesloop
    (19) statutesloop -> .
    (20) statute -> . init
    (21) statute -> . condition
    (22) statute -> . writting
    (23) statute -> . loop
    (24) statute -> . assignation
    (25) statute -> . functioncall
    (31) init -> . listinit
    (32) init -> . normalinit
    (40) condition -> . IF O_PARENTHESIS expression C_PARENTHESIS block else
    (27) writting -> . PRINT O_PARENTHESIS writtingloop C_PARENTHESIS SEMICOLON
    (88) loop -> . whileloop
    (89) loop -> . timesloop
    (26) assignation -> . var_assign EQUALS expression SEMICOLON
    (92) functioncall -> . ID O_PARENTHESIS parametersinput C_PARENTHESIS SEMICOLON
    (34) listinit -> . LIST type var EQUALS list SEMICOLON
    (33) normalinit -> . type var EQUALS expression SEMICOLON
    (90) whileloop -> . WHILE O_PARENTHESIS expression C_PARENTHESIS block
    (91) timesloop -> . TIMES O_PARENTHESIS INTCONST C_PARENTHESIS block
    (72) var_assign -> . ID listaccess
    (11) type -> . BOOL
    (12) type -> . INT
    (13) type -> . FLOAT
    (14) type -> . STRING

    RETURN          reduce using rule 19 (statutesloop -> .)
    C_BRACKET       reduce using rule 19 (statutesloop -> .)
    IF              shift and go to state 31
    PRINT           shift and go to state 18
    ID              shift and go to state 29
    LIST            shift and go to state 37
    WHILE           shift and go to state 17
    TIMES           shift and go to state 16
    BOOL            shift and go to state 21
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    STRING          shift and go to state 25
